fix(linkinput): inherit text alignment
* Link inputs will now inherit text alignment (#163)

--- a/module/src/scss/_buttons.scss
+++ b/module/src/scss/_buttons.scss
@@ -6,6 +6,7 @@
   &:not(.dropdown-item) {
     padding: 0 !important;
     vertical-align: inherit !important;
+    text-align: inherit !important;
   }
 }
 
